--- a/componentes/bem_vindo.html
+++ b/componentes/bem_vindo.html
@@ -1,6 +1,6 @@
 <section class="bem_vindo container-fluid">
     <article class="row">
-        <h2>SEJA BEM-VINDO A VINHAL MÁQUINAS.</h2>
+        <h2>SEJA BEM-VINDO A NACAR EQUIPAMENTOS.</h2>
         <p>Fale com um de nossos atendentes!</p>
         <a href="https://wa.me//5563981393300?" target="_blank" class="btn-orcamento">Fale Conosco <i class="bi bi-whatsapp"></i></a>
     </article>
