--- a/componentes/footer.html
+++ b/componentes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer container-fluid">
     <article class="row article-row">
         <aside class="col-12 col-md-4 logo">
-            <a href="https://vinhal.com.br/"><img src="imgs/logo/logo.png" alt="Logo Vinhal"></a>
+            <a href="index.php"><img src="imgs/logo/logo.png" alt="Logo Vinhal"></a>
         </aside>
         <aside class="col-3 order-2 order-md-1 col-md-4 links links-rapidos">
             <ul>                
@@ -13,15 +13,15 @@
         </aside>
         <aside class="col-8 order-1 order-md-2 col-md-4 links">
             <ul>
-                <li><a href="tel://556334153664"><i class="bi bi-telephone"></i> (63) 3415-3664</a></li>
-                <li><a href="tel://556232956102"><i class="bi bi-telephone"></i> (62) 3295-6102</a></li>
-                <li><a href="https://wa.me//5563981393300?"><i class="bi bi-whatsapp"></i> (63)9 8139-3300</a></li>
-                <li><a href="mailto:yago@vinhal.com.br"><i class="bi bi-envelope-at"></i> yago@vinhal.com.br</a></li>
-                <li><a href="https://maps.app.goo.gl/gohjGVR4RZXvpXPE8" target="_blank"><i class="bi bi-geo-alt"></i> Rua Canindé, n 72 Entrocamento Araguaína-Tocantins Brazil</a></li>
+                <li><a href="tel://55629999999"><i class="bi bi-telephone-fill"></i> (62) 9999-9999</a></li>
+                <li><a href="tel://556299999999"><i class="bi bi-telephone-fill"></i> (62) 9999-9999</a></li>
+                <li><a href="https://wa.me//5562999999999?"><i class="bi bi-whatsapp"></i> (62)9 9999-9999</a></li>
+                <li><a href="mailto:vendas@nacarequipamentos.com.br"><i class="bi bi-envelope-fill"></i> vendas@nacarequipamentos.com.br</a></li>
+                <li><a href="https://maps.app.goo.gl/gohjGVR4RZXvpXPE8" target="_blank"><i class="bi bi-geo-alt-fill"></i> Rua abc, n 00 abc-abc Brazil</a></li>
             </ul>
         </aside>
     </article>
     <article class="row copy">
-        <h3>&copy; 2024 Copyright: Vinhal - Todos os direitos reservados</h3>
+        <h3>&copy; 2024 Copyright: Nacar Equipamentos - Todos os direitos reservados</h3>
     </article>
 </footer>
