--- a/componentes/slide.html
+++ b/componentes/slide.html
@@ -44,7 +44,7 @@
         
     </div>
 
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next d-none d-md-flex"></div>
+    <div class="swiper-button-prev d-none d-md-flex"></div>
     <div class="swiper-pagination"></div>
 </div>
